--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,28 @@
 body {
   background-color: #111a28;
-  display: flex;
   color: #fff;
-  justify-content: center;
+  height: 90vh;
   margin-top: 50px;
+}
+h1 {
+  font-size: 30px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .passes {
   display: flex;
   justify-content: space-between;
-  width: 300px;
-  height: 590px;
-  transform: scale(0.5, 0.5);
+  align-items: center;
+  width: 60vw;
+  transform: scale(0.75, 0.75);
+  font-size: 15px;
+  margin: 30px;
+  padding: 30px;
 }
 .pass {
   flex-basis: calc(100% / 3 - 10px);
   background-color: #fff;
   background-color: darksalmon;
+  margin: 20px;
 }
